Fix letter-spacing unit.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1 {
     text-align: center;
     font-size: 34px;
-    letter-spacing: 1.3;
+    letter-spacing: 2px;
 }
 h2 {
     font-size: 20px;
@@ -29,7 +29,7 @@ p {
     margin-right: 20px;
     font-size: 20px;
     font-weight: 500;
-    letter-spacing: 1.5;
+    letter-spacing: 1.5px;
     color: #8F8F8F;
 }
 #navigation .selected {
